syntax = "proto3";

package pb;

import "portfolio.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message GetPortfolioRequest {
  int64 id = 1;
}

message GetPortfolioResponse {
  Portfolio portfolio = 1;
}